--- a/conversorMoedas/estiloConversor.css
+++ b/conversorMoedas/estiloConversor.css
@@ -1,12 +1,73 @@
+body {
+    background-color: #993399 ;
+    color: black;
+    font-family: "Playfair Display", serif;
+}
+
+
 #container {
+    background-color: Magenta;
     margin-top: 50px;
-    border:5px solid grey;
+    box-shadow: 0px 2px 5px rgba(75, 3, 33, 1);
     padding: 20px;
     text-align: center;
+    width: 600px;
+    margin: auto;
+    border-radius: 10px;
+}
+
+button {
+    background-color: #6b5b95;
+    color: #f0f0f0;
+    border: none;
+    border-radius: 5px;
+    font-size: 15px
+}
+
+button:hover{
+    background-color: black;
+    cursor:pointer;
+}
+
+select {
+    border: none;
+    border-radius: 5px;
+    font-size: 15px;
 }
 
 input, select, button {
     margin-top: 50px;
     margin-bottom: 50px;
     padding: 10px;
+}
+
+h1, p {
+    font-family: "Playfair Display", serif;
+}
+
+#resultado {
+    font-weight: bold;
+}
+
+#mensagem-usuario {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    background-color: #f0f0f0;
+}
+
+#botao-aceita-mensagem {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+
+.oculto {
+    display: none;
+}
+
+#botao-aceita-mensagem {
+    background-color: #993399 ;
 }
