--- a/conversorMoedas/estiloConversor.css
+++ b/conversorMoedas/estiloConversor.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #330d33 ;
+    background-color: #250125 ;
     color: black;
     font-family: "Playfair Display", serif;
 }
@@ -69,5 +69,5 @@ h1, p {
 }
 
 #botao-aceita-mensagem {
-    background-color: #993399 ;
+    background-color: #360b36 ;
 }
